--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -82,7 +82,7 @@ h1 {
     height: 100%;
   }
 
-  #dog {
+  #intro {
     width: 100%;
     height: 100%;
     overflow: auto;
@@ -93,7 +93,7 @@ h1 {
     }
   }
 
-  // #dog {
+  // #intro {
   //   background: url("https://images.unsplash.com/photo-1473628121395-7fe8cafb5639?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&s=cae6fefaa5bec3cbf16132a217eab00c") no-repeat center center fixed;
   //   background-size: cover;
   //   width: 100%;
