--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -28,6 +28,8 @@ h1 {
   bottom: 0;
   background: $background-sidebar;
   color: $color-sidebar;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   * {
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -85,11 +87,18 @@ h1 {
   #intro {
     width: 100%;
     height: 100%;
-    overflow: auto;
+    // overflow: auto;
 
     img {
-      width: 100%;
+      position: relative;
+      width: auto;
       height: auto;
+      max-height: 100%;
+      // max-width: 100%;
+      width: 100%;
+      transform: translate3d(-50%, -50%, 0);
+      left: 50%;
+      top: 50%;
     }
   }
 
