--- a/www/style/main.scss
+++ b/www/style/main.scss
@@ -94,8 +94,7 @@ h1 {
       width: auto;
       height: auto;
       max-height: 100%;
-      // max-width: 100%;
-      width: 100%;
+      max-width: 100%;
       transform: translate3d(-50%, 0, 0);
       left: 50%;
       object-fit: contain;
